//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table User {
  id Int [pk, increment]
  username String [unique, not null]
  email String [unique, not null]
  password String [not null]
  active Boolean [not null, default: false]
  verifyEmail Boolean [not null, default: false]
  verifyContact Boolean [not null, default: false]
  isAdmin Boolean [not null, default: false]
  name String
  avatar String
  phoneNumber String
  addressId Int
  role Role [not null]
  reviews Review [not null]
  orders Order [not null]
  sessions Session [not null]
  notificationSent NotificationSent [not null]
  snapshots UserSnapshot [not null]
  cart Cart
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  address Address
}

Table UserSnapshot {
  id Int [pk, increment]
  username String [not null]
  email String [not null]
  phoneNumber String
  userId Int
  order Order [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User
}

Table Role {
  id Int [pk, increment]
  name String [unique, not null]
  permissionsOnRole PermissionsOnRole [not null]
  userId Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  User User
}

Table PermissionsOnRole {
  roleId Int [not null]
  permissionId Int [not null]
  mode PermMode [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  role Role [not null]
  permission Permission [not null]

  indexes {
    (roleId, permissionId) [pk]
  }
}

Table Permission {
  id Int [pk, increment]
  name String [unique, not null]
  permissionsOnRole PermissionsOnRole [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Address {
  id Int [pk, increment]
  street String
  district String
  city String
  user User [not null]
  order Order [not null]
}

Table Session {
  id Int [pk, increment]
  refreshToken String [unique, not null]
  deviceId String [not null]
  expires DateTime [not null]
  userId Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User
}

Table Product {
  id Int [pk, increment]
  name String [not null]
  sku String [unique, not null]
  price Decimal
  discount Float
  qty Int
  avgRating Float [not null, default: 0]
  sold Int [not null, default: 0]
  brandId Int
  description String
  specification String
  categories CategoriesOnProducts [not null]
  reviews Review [not null]
  snapshots ProductSnapshot [not null]
  productsOnCart ProductsOnCart [not null]
  coupons Coupon [not null]
  colors ProductColor [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  brand Brand
}

Table ProductColor {
  id Int [pk, increment]
  name String [not null]
  color String [not null]
  images String[] [not null]
  productId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  product Product [not null]
  productsOnCart ProductsOnCart [not null]
}

Table Coupon {
  id Int [pk, increment]
  code String [not null]
  type CouponType [not null]
  discountAmount Decimal
  discountPercentage Float
  expires DateTime [not null]
  limit Decimal
  minimum Decimal
  productId Int
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  product Product
}

Table ProductSnapshot {
  id Int [pk, increment]
  name String [not null]
  price Decimal [not null]
  discount Float [not null]
  description String
  specification String
  colorName String [not null]
  colorCode String [not null]
  colorImage String[] [not null]
  productId Int [not null]
  orderId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  product Product [not null]
  order Order [not null]
}

Table Brand {
  id Int [pk, increment]
  name String [not null]
  products Product [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Category {
  id Int [pk, increment]
  name String [not null]
  products CategoriesOnProducts [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table CategoriesOnProducts {
  productId Int [not null]
  categoryId Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  product Product [not null]
  category Category [not null]

  indexes {
    (productId, categoryId) [pk]
  }
}

Table Review {
  id Int [pk, increment]
  content String [not null]
  userId Int [not null]
  productId Int [not null]
  rating Float [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  user User [not null]
  product Product [not null]
}

Table Order {
  id Int [pk, increment]
  orderStatus OrderStatus [not null]
  userId Int [not null]
  paymentId Int [not null]
  shippingMethodId Int [not null]
  shippingAddressId Int [not null]
  userSnapshotId Int [not null]
  productSnapshots ProductSnapshot [not null]
  totalDiscount Decimal [not null]
  totalPrice Decimal [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  shippingAddress Address [not null]
  User User
  Payment Payment [not null]
  shippingMethod ShippingMethod [not null]
  userSnapshot UserSnapshot [not null]
}

Table Cart {
  id Int [pk, increment]
  userId Int [unique, not null]
  productsOnCart ProductsOnCart [not null]
  user User [not null]
}

Table ProductsOnCart {
  productId Int [not null]
  cardId Int [not null]
  productColorId Int [not null]
  qty Int [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  product Product [not null]
  cart Cart [not null]
  color ProductColor [not null]

  indexes {
    (productId, cardId) [pk]
  }
}

Table ShippingMethod {
  id Int [pk, increment]
  name String [not null]
  order Order [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Payment {
  id Int [pk, increment]
  name String [not null]
  type PaymentType [not null]
  orders Order [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table Notification {
  id Int [pk, increment]
  title String [not null]
  content String [not null]
  url String [not null]
  type NotificationType [not null]
  NotificationSent NotificationSent [not null]
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
}

Table NotificationSent {
  id Int [pk, increment]
  notificationId Int [not null]
  recipentId Int [not null]
  isRead Boolean [not null, default: false]
  readTime DateTime
  createdAt DateTime [default: `now()`, not null]
  updatedAt DateTime [not null]
  notification Notification [not null]
  recipent User [not null]
}

Enum NotificationType {
  ORDER_STATUS
  REVIEW
}

Enum PaymentType {
  CASH
  ONLINE
}

Enum OrderStatus {
  IN_CART
  PROCESSING
  SHIPPING
  CANCELLED
  COMPLETED
}

Enum PermMode {
  RO
  RW
}

Enum CouponType {
  PERCENTAGE
  FIXED
}

Ref: User.addressId > Address.id

Ref: UserSnapshot.userId > User.id

Ref: Role.userId > User.id

Ref: PermissionsOnRole.roleId > Role.id [delete: Cascade]

Ref: PermissionsOnRole.permissionId > Permission.id [delete: Cascade]

Ref: Session.userId > User.id [delete: Cascade]

Ref: Product.brandId > Brand.id

Ref: ProductColor.productId > Product.id [delete: Cascade]

Ref: Coupon.productId > Product.id [delete: Cascade]

Ref: ProductSnapshot.productId > Product.id [delete: Cascade]

Ref: ProductSnapshot.orderId > Order.id [delete: Cascade]

Ref: CategoriesOnProducts.productId > Product.id [delete: Cascade]

Ref: CategoriesOnProducts.categoryId > Category.id [delete: Cascade]

Ref: Review.userId > User.id [delete: Cascade]

Ref: Review.productId > Product.id [delete: Cascade]

Ref: Order.shippingAddressId > Address.id

Ref: Order.userId > User.id [delete: Cascade]

Ref: Order.paymentId > Payment.id

Ref: Order.shippingMethodId > ShippingMethod.id

Ref: Order.userSnapshotId > UserSnapshot.id

Ref: Cart.userId - User.id [delete: Cascade]

Ref: ProductsOnCart.productId > Product.id [delete: Cascade]

Ref: ProductsOnCart.cardId > Cart.id [delete: Cascade]

Ref: ProductsOnCart.productColorId > ProductColor.id

Ref: NotificationSent.notificationId > Notification.id [delete: Cascade]

Ref: NotificationSent.recipentId > User.id [delete: Cascade]